--- a/Hola mundo/index.html
+++ b/Hola mundo/index.html
@@ -8,8 +8,7 @@
   <body>
 <h1>Primer H1</h1>
     <!--script javascript-->   
-    <script>
-        console.log("Hola mundo");
-    </script>
+   <script src="codigo.js"></script>
+   <script src="estudio_variables.js"></script>
   </body>
 </html>
