--- a/Hola mundo/index.html
+++ b/Hola mundo/index.html
@@ -10,5 +10,6 @@
     <!--script javascript-->   
    <script src="codigo.js"></script>
    <script src="estudio_variables.js"></script>
+   <script src="Aritmeticos.js"></script>
   </body>
 </html>
